--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,10 @@ jobs:
       - name: Set up JDK 21
         uses: actions/setup-java@v2
         with:
-          java-version: '21'  # Set up JDK 21
+          java-version: '21'         # Set up JDK 21
+          distribution: 'adoptopenjdk' # Specify the distribution (can also be 'zulu' or 'temurin')
+          java-package: jdk
+          architecture: x64
 
       - name: Cache Maven dependencies
         uses: actions/cache@v3   # Updated to v3
