--- a/CrudApi/.github/workflows/ci.yml
+++ b/CrudApi/.github/workflows/ci.yml
@@ -33,4 +33,5 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Build with Maven
-        run: mvn clean install --no-transfer-progress  # Run Maven build
+        run: mvn clean install --no-transfer-progress  # Maven build in the current directory
+        working-directory: ./  # Ensure Maven runs in the root directory
