--- a/CrudApi/.github/workflows/ci.yml
+++ b/CrudApi/.github/workflows/ci.yml
@@ -10,28 +10,29 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # GitHub Actions uses Ubuntu for builds
+    runs-on: ubuntu-latest
 
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v2  # This action checks out your code
+        uses: actions/checkout@v2
 
       - name: Set up JDK 21
         uses: actions/setup-java@v2
         with:
-          java-version: '21'         # Set up JDK 21
-          distribution: 'temurin'    # Use 'temurin' instead of 'adoptopenjdk'
-          java-package: jdk
-          architecture: x64
+          java-version: '21'
+          distribution: 'temurin'
+
+      - name: Move to the correct directory
+        run: cd ${{ github.workspace }}/CRUDAPI
 
       - name: Cache Maven dependencies
-        uses: actions/cache@v3   # Updated to v3
+        uses: actions/cache@v3
         with:
-          path: ~/.m2/repository  # Cache Maven dependencies
+          path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
 
       - name: Build with Maven
-        run: mvn clean install --no-transfer-progress  # Maven build in the current directory
-        working-directory: ./  # Ensure Maven runs in the root directory
+        run: mvn clean install --no-transfer-progress
+        working-directory: ${{ github.workspace }}/CRUDAPI  # Ensure correct working directory
