--- a/CrudApi/.github/workflows/ci.yml
+++ b/CrudApi/.github/workflows/ci.yml
@@ -16,18 +16,18 @@ jobs:
       - name: Check out the repository
         uses: actions/checkout@v3
 
-      - name: List directory contents (for debugging)
+      - name: Debug - List files in root directory
         run: ls -R
         working-directory: ${{ github.workspace }}
+
+      - name: Move into the correct directory
+        run: cd CrudApi && ls -R
 
       - name: Set up JDK 21
         uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
+          distribution: 'temurin'  # 'temurin' is the correct distribution name
           java-version: '21'
-
-      - name: Ensure correct working directory
-        run: echo "Current directory: $(pwd)"
 
       - name: Cache Maven dependencies
         uses: actions/cache@v3
@@ -38,5 +38,6 @@ jobs:
             ${{ runner.os }}-maven-
 
       - name: Run Maven Build
-        run: mvn clean install --no-transfer-progress
-        working-directory: ${{ github.workspace }}/CrudApi
+        run: |
+          cd CrudApi
+          mvn clean install --no-transfer-progress
