--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,27 +10,34 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # GitHub Actions uses Ubuntu for builds
+    runs-on: ubuntu-latest
 
     steps:
       - name: Check out the repository
-        uses: actions/checkout@v2  # This action checks out your code
+        uses: actions/checkout@v3
+
+      - name: Debug - List files in root directory
+        run: ls -R
+        working-directory: ${{ github.workspace }}
+
+      - name: Move into the correct directory
+        run: cd CrudApi && ls -R
 
       - name: Set up JDK 21
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
-          java-version: '21'         # Set up JDK 21
-          distribution: 'temurin'    # Use 'temurin' instead of 'adoptopenjdk'
-          java-package: jdk
-          architecture: x64
+          distribution: 'temurin'  # 'temurin' is the correct distribution name
+          java-version: '21'
 
       - name: Cache Maven dependencies
-        uses: actions/cache@v3   # Updated to v3
+        uses: actions/cache@v3
         with:
-          path: ~/.m2/repository  # Cache Maven dependencies
+          path: ~/.m2/repository
           key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Build with Maven
-        run: mvn clean install --no-transfer-progress  # Run Maven build
+      - name: Run Maven Build
+        run: |
+          cd CrudApi
+          mvn clean install --no-transfer-progress
