--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: Java CI with Maven
+name: CI Build
 
 on:
   push:
@@ -13,20 +13,13 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Check out the repository
+      - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Debug - List files in root directory
-        run: ls -R
-        working-directory: ${{ github.workspace }}
-
-      - name: Move into the correct directory
-        run: cd CrudApi && ls -R
-
       - name: Set up JDK 21
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
-          distribution: 'temurin'  # 'temurin' is the correct distribution name
+          distribution: 'temurin'  # Correct Java distribution
           java-version: '21'
 
       - name: Cache Maven dependencies
@@ -37,7 +30,14 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-maven-
 
-      - name: Run Maven Build
-        run: |
-          cd CrudApi
-          mvn clean install --no-transfer-progress
+      - name: Build with Maven
+        run: mvn clean install --no-transfer-progress
+
+      - name: Run Tests
+        run: mvn test
+
+      - name: Upload Test Reports
+        uses: actions/upload-artifact@v3
+        with:
+          name: test-reports
+          path: target/surefire-reports/
